Pylint - remove unused imports, etc